--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,8 +17,8 @@ ADD_LIBRARY( coOsg MODULE ${_HEADER_FILES} ${_SOURCE_FILES} ${_MODULE_SOURCES} )
 FIND_PACKAGE( OpenGL REQUIRED )
 TARGET_LINK_LIBRARIES( coOsg ${CORAL_LIBRARIES} ${OPENSCENEGRAPH_LIBRARIES} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} )
 
-CORAL_DEFAULT_TARGET_PROPERTIES( coOsg )
-CORAL_MODULE_TARGET_PROPERTIES( coOsg )
+CORAL_TARGET( coOsg )
+CORAL_MODULE_TARGET( coOsg )
 
 ################################################################################
 # Source Groups
