Updated to the latest Coral version with revamped native classes.
- Removed deprecated Vec/Quat/Mat native classes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,5 @@ INCLUDE( CPack )
 
 ADD_SUBDIRECTORY( src )
 
-ENABLE_TESTING()
-ADD_SUBDIRECTORY( tests )
-
+#ENABLE_TESTING()
+#ADD_SUBDIRECTORY( tests )
